--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,26 @@
 name: CI
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: [push, pull_request]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
+
     services:
       postgres:
         image: postgres:latest
-          POSTGRES_DB: tasks_tracker
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: P454sh402
+        env:
+          POSTGRES_DB: your_database_name
+          POSTGRES_USER: your_username
+          POSTGRES_PASSWORD: your_password
         ports:
           - 5432:5432
         options: >-
-          --health-cmd "pg_isready -U postgres"
+          --health-cmd "pg_isready -U your_username"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -39,8 +36,7 @@ jobs:
         pip install -r requirements.txt
 
     - name: Run tests
+      env:
+        DATABASE_URL: "postgresql://your_username:your_password@localhost:5432/your_database_name"
       run: |
-        pytest
-
-    - name: Deploy
-      run: echo "Deploy your application here"
+        pytest  # или команду, которую вы используете для запуска тестов
